# UploadTask

./: .gitignore  pyproject.toml
kernel/: settings.py  urls.py
media/templates/pages/: index.html
pages/: urls.py
pages/admin/: __init__.py  question_gallery.py
pages/forms/: __init__.py  question_gallery.py
pages/migrations/: 0001_initial.py  0002_alter_gallery_fileinput1_alter_gallery_fileinput2.py  0003_questiongallery_delete_gallery.py
pages/models/: __init__.py  questions_gallery.py
pages/views/: __init__.py  question_gallery.py
