[tool.poetry]
name = "qazale"
version = "0.1.0"
description = ""
authors = ["mohmdfo <mohammad.fotouhi80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
pillow = "^10.1.0"
ruff = "^0.1.3"
isort = "^5.12.0"
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
